--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* { font-family: 'Rubik', sans-serif; }
+body {  
+  background-color: #dfe9f3;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{ font-weight: 500px; }
+h3 {
+  text-align: center;
+  font-size: 2rem;  
+  font-weight: lighter;
+}
+
+p { text-align: center; }
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-width: 2px;
+  border-bottom: solid #000;
+  padding-bottom: 1.5rem;
+  padding-left: 2rem;
+}
+
+
+input {
+  font-size: 1rem;
+  border: solid #000;
+  border-radius: 5px;
+  width: 15rem;
+  height: 1.5rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: #D6DBDF;
+  align-content: center;
+  border: .1px solid #000;
+  border-radius: 6px;
+  margin: 0 10px 10px 0;
+  overflow: hidden;
+  height: auto;
+  padding-bottom: 0;
+  font-weight: bolder;
+
+  -webkit-box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
+  -moz-box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
+  box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
+}
+.card p{
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+.card img {
+  padding-top: 2rem;
+  height: 17rem;
+}
+
+.card-grid {
+  max-width: 120rem;
+  width: 95%;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1.5rem;
+    }
+}
+
+@media (min-width: 480px) {
+  .card-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
